--- a/Exercices/raving-redactionist-plus-plus/css/style.css
+++ b/Exercices/raving-redactionist-plus-plus/css/style.css
@@ -5,6 +5,7 @@ By default that's nothing.
 
 **********************************************/
 body {
+  font-family: "Big Caslon", "Book Antiqua", "Palatino Linotype", Georgia, serif;
   background-color: beige;
   margin-left: 20%;
   margin-right: 20%;
@@ -20,6 +21,11 @@ body {
   width: 45%;
   float: left;
   padding: 20px;
+  border: 2px solid red;
+}
+
+.poem-title {
+  padding-left: 15%;
   border: 2px solid red;
 }
 
