Ex6: Interval that checks inputs every 600ms

--- a/Exercices/raving-redactionist-plus-plus/css/style.css
+++ b/Exercices/raving-redactionist-plus-plus/css/style.css
@@ -35,7 +35,19 @@ body {
   padding-left: 15%;
 }
 
-.secretWord {
+.secret-word {
+  font-weight: bolder;
+  font-size: 1.5rem;
+}
+
+#guess-error {
+  color: red;
+  font-weight: bolder;
+  font-size: 1.5rem;
+}
+
+#guess-right {
+  color: green;
   font-weight: bolder;
   font-size: 1.5rem;
 }
