--- a/Exercices/raving-redactionist-plus-plus/css/style.css
+++ b/Exercices/raving-redactionist-plus-plus/css/style.css
@@ -71,3 +71,47 @@ span {
 #word4 {
   /* color: cyan; */
 }
+
+.button {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  
+  border-radius: 5px;
+  border: none;
+  color: white;
+  padding: 16px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  transition-duration: 0.4s;
+  cursor: pointer;
+}
+
+.button1 {
+  margin-top: 20px;
+  background-color: white;
+  color: black;
+  border: 2px solid #4CAF50;
+}
+
+.button1:hover {
+  background-color: #4CAF50;
+  color: white;
+}
+
+#fullScreenVideoBody {
+  margin: 0;
+  overflow: hidden;
+}
+#fullScreenVideoContent {
+  position: fixed;
+  top: 0;
+  background: rgba(0, 0, 0, 0);
+  color: #f1f1f1;
+  width: 100%;
+  padding: 35px;
+}
