--- a/Project/Project2/server/public/css/style.css
+++ b/Project/Project2/server/public/css/style.css
@@ -8,9 +8,143 @@ using the CSS Grid.
 Also hides overflow.
 
 **********************************************/
+/* Fix the box width wrapping thing... */
+*, *:before, *:after {
+     -moz-box-sizing: border-box;
+     -webkit-box-sizing: border-box;
+     box-sizing: border-box;
+    }
 
 body {
+  position: relative;
+  top: 0px;
+  left: 0px;
   padding: 0;
-  margin: 15;
-  overflow: hidden; /* Hide anything that goes off the window size */
+  margin: 0;
+  overflow: hidden;
+  width: 100%;
+  height: 100vh;
+}
+
+.text-test-container {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  z-index: 1;
+}
+
+.image-container {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
+  z-index: 999999;
+}
+
+.image-holder {
+  z-index: 999999;
+}
+
+.image-holder img
+{
+  width: 10vw;
+  z-index: 999999;
+}
+
+.top-container {
+  position: absolute;
+  z-index: 501;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  padding-top: 20px;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.time-container {
+
+}
+
+#time {
+  text-align: center;
+  font-size: 3em;
+  margin-block-start: unset;
+  margin-block-end: 10px;
+  color: #d5d5d5;
+  font-family: sans-serif;
+}
+
+#date {
+  text-align: center;
+  font-size: 1em;
+  margin-block-start: unset;
+  margin-block-end: 10px;
+  color: #d5d5d5;
+  font-family: sans-serif;
+}
+
+.slider-container-big-screen {
+  margin-left: 33.333333%;
+  flex: 0 0 33.333333%;
+  max-width: 33.333333%;
+}
+
+.slider-container-small-screen {
+
+}
+
+.slider {
+  -webkit-appearance: none;
+  width: 100%;
+  height: 10px;
+  background: #d3d3d3;
+  border-radius: 5px;
+  outline: none;
+  opacity: 0.7;
+  -webkit-transition: .2s;
+  transition: opacity .2s;
+}
+
+.slider:hover {
+  opacity: 1;
+}
+
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 15px;
+  height: 15px;
+  border-radius: 10px;
+  background: #04AA6D;
+  cursor: pointer;
+}
+
+.slider::-moz-range-thumb {
+  width: 25px;
+  height: 25px;
+  background: #04AA6D;
+  cursor: pointer;
+}
+
+
+#map {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  width: 400px;
+  height: 600px;
+}
+
+.mapboxgl-popup {
+max-width: 400px;
+font: 12px/20px 'Helvetica Neue', Arial, Helvetica, sans-serif;
+}
+
+.mapboxgl-canvas {
+
 }
