--- a/Project/Project2/server/public/css/style.css
+++ b/Project/Project2/server/public/css/style.css
@@ -15,6 +15,7 @@ Also hides overflow.
      box-sizing: border-box;
     }
 
+
 body {
   position: relative;
   top: 0px;
@@ -59,9 +60,9 @@ body {
   top: 0px;
   left: 0px;
   width: 100%;
-  padding-top: 20px;
-  padding-right: 15px;
-  padding-left: 15px;
+  padding-top: 3vh;
+  padding-right: 2.5vw;
+  padding-left: 2.5vw;
   margin-right: auto;
   margin-left: auto;
 }
@@ -72,18 +73,18 @@ body {
 
 #time {
   text-align: center;
-  font-size: 3em;
+  font-size: 8vh;
   margin-block-start: unset;
-  margin-block-end: 10px;
+  margin-block-end: 2vw;
   color: #d5d5d5;
   font-family: sans-serif;
 }
 
 #date {
   text-align: center;
-  font-size: 1em;
+  font-size: 3vh;
   margin-block-start: unset;
-  margin-block-end: 10px;
+  margin-block-end: 3vw;
   color: #d5d5d5;
   font-family: sans-serif;
 }
@@ -101,9 +102,9 @@ body {
 .slider {
   -webkit-appearance: none;
   width: 100%;
-  height: 10px;
+  height: 3vh;
   background: #d3d3d3;
-  border-radius: 5px;
+  border-radius: 7vw;
   outline: none;
   opacity: 0.7;
   -webkit-transition: .2s;
@@ -117,16 +118,16 @@ body {
 .slider::-webkit-slider-thumb {
   -webkit-appearance: none;
   appearance: none;
-  width: 15px;
-  height: 15px;
-  border-radius: 10px;
+  width: 4vh;
+  height: 4vh;
+  border-radius: 7vw;
   background: #04AA6D;
   cursor: pointer;
 }
 
 .slider::-moz-range-thumb {
-  width: 25px;
-  height: 25px;
+  width: 5vw;
+  height: 5vw;
   background: #04AA6D;
   cursor: pointer;
 }
