--- a/Project/Project2/server/public/css/style.css
+++ b/Project/Project2/server/public/css/style.css
@@ -84,9 +84,55 @@ body {
   text-align: center;
   font-size: 3vh;
   margin-block-start: unset;
-  margin-block-end: 3vw;
   color: #d5d5d5;
   font-family: sans-serif;
+  margin: 0;
+}
+
+.date-container {
+  display: flex;
+  flex-wrap: wrap;
+  margin-block-end: 3vw;
+}
+
+.arrow-right {
+  padding-left: 4vw;
+  text-align: left!important;
+  flex-basis: 0;
+  flex-grow: 1;
+  max-width: 100%;
+  /* lol IS IT CENTERED NOW!? */
+  align-self: center;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
+}
+
+.arrow-left {
+  padding-right: 4vw;
+  text-align: right!important;
+  flex-basis: 0;
+  flex-grow: 1;
+  max-width: 100%;
+  /* lol IS IT CENTERED NOW!? */
+  align-self: center;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
+}
+
+svg {
+  width: 5vw;
+  fill: #04AA6D;
+}
+
+#arrow-left {
+  transform: rotate(180deg);
+  cursor: pointer;
+}
+
+#arrow-right {
+  cursor: pointer;
 }
 
 .slider-container-big-screen {
@@ -137,13 +183,64 @@ body {
   position: absolute;
   top: 0;
   bottom: 0;
-  width: 400px;
+  max-width: 100%;
   height: 600px;
+  overflow: hidden;
 }
 
-.mapboxgl-popup {
-max-width: 400px;
-font: 12px/20px 'Helvetica Neue', Arial, Helvetica, sans-serif;
+.mapboxgl-popup-close-button {
+  display: none;
+}
+
+.recipe-name {
+  font-size: 5vh;
+  color: #117e56;
+}
+
+#active-popup {
+  font: 400 15px/22px 'Source Sans Pro', 'Helvetica Neue', sans-serif;
+  font-size: 4vh;
+  line-height: initial;
+  word-wrap: break-word;
+  background: #e7d4b7c4;
+  color: #6c6151;
+  max-height: 50vh;
+  border-radius: 5vw;
+  overflow-y: scroll;
+  padding: 2vh;
+}
+
+#active-popup::-webkit-scrollbar {
+    width: 2vw;
+}
+
+#active-popup::-webkit-scrollbar-track {
+    background-color: transparent;
+}
+
+#active-popup::-webkit-scrollbar-thumb {
+  background-color: #6c6151;
+  border-radius: 2vw;
+  border: 1vw;
+  background-clip: content-box;
+}
+
+#active-popup::-webkit-scrollbar-thumb:hover {
+  background-color: #91836f;
+}
+
+#active-popup::-webkit-scrollbar-track-piece:end {
+    background: transparent;
+    margin-bottom: 4vh;
+}
+
+#active-popup::-webkit-scrollbar-track-piece:start {
+    background: transparent;
+    margin-top: 4vh;
+}
+
+#active-popup-tip {
+  display: none;
 }
 
 .mapboxgl-canvas {
