--- a/Project/Project2/server/public/css/style.css
+++ b/Project/Project2/server/public/css/style.css
@@ -54,6 +54,25 @@ body {
   z-index: 999999;
 }
 
+.language-container {
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
+  z-index: 999999;
+  padding: 2.5vh;
+  font-size: 2.9vh;
+  font-family: sans-serif;
+  font-weight: bolder;
+  color: #04AA6D;
+}
+
+#language-selector {
+  cursor: pointer;
+}
+
 .top-container {
   position: absolute;
   z-index: 501;
