P2: Finished up the app!!!
Wooops forgot to commit/push :/

--- a/Project/Project2/server/public/css/style.css
+++ b/Project/Project2/server/public/css/style.css
@@ -24,14 +24,137 @@ body {
   margin: 0;
   overflow: hidden;
   width: 100%;
-  height: 100vh;
+  height: 100%;
+  overflow-x: hidden;
 }
 
-.text-test-container {
-  position: absolute;
+.info-wrapper {
+  position: fixed;
+  display: flex;
+  flex-wrap: wrap;
   top: 0px;
   left: 0px;
-  z-index: 1;
+  width: 100%;
+  height: 100%;
+  margin: auto;
+  z-index: 2001;
+  font-family: sans-serif;
+  font-weight: bolder;
+  font-family: Helvetica;
+  background: #0000005d;
+
+  align-items: center!important;
+}
+
+.info-container {
+  flex-basis: 0;
+  flex-grow: 1;
+  max-width: 100%;
+  position: relative;
+  text-align: center!important;
+  background-color: #117e56;
+  margin: auto;
+  border-radius: 2.5vw;
+  padding: 2vw;
+  margin-left: 10vw;
+  margin-right: 10vw;
+}
+
+.info-container p {
+  color: #efdcc0;
+  font-size: 3vw;
+}
+
+.info-container h1 {
+  display: flex;
+
+  border-radius: 3vw;
+  font-size: 4vw;
+  font-weight: strong;
+  border-width: 0;
+  margin: auto;
+  text-align: center;
+  color: #efdcc0;
+
+  align-self: center;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
+}
+
+.info-container h2 {
+  font-size: 4.5vw;
+}
+
+.info-container button {
+  display: flex;
+
+  width: 30vw;
+  height: 5vh;
+  border-radius: 3vw;
+  font-size: 2.5vw;
+  font-weight: 700;
+  border-width: 0;
+  margin: auto;
+
+  text-transform: uppercase;
+  cursor: pointer;
+  color: #04aa6dba;
+  background-color: #efdcc0;
+
+  align-self: center;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
+
+  transition: background-color 300ms;
+}
+
+.info-container button:hover {
+  background-color: #f9eedf;
+}
+
+#random-button {
+  width: 30vw;
+  height: 7vh;
+  color:#620500;
+}
+
+input[type=text] {
+  width: 100%;
+  padding: 3vw;
+  display: inline-block;
+  border: 0.5vw solid #ccc;
+  border-radius: 0.5vw;
+  box-sizing: border-box;
+  font-size: 4.5vw;
+  margin-bottom: 1vh;
+}
+
+textarea {
+  width: 100%;
+  height: 35vh;
+  -moz-border-bottom-colors: none;
+  -moz-border-left-colors: none;
+  -moz-border-right-colors: none;
+  -moz-border-top-colors: none;
+  background: #f5e8d6;
+  border-color: -moz-use-text-color #FFFFFF #FFFFFF -moz-use-text-color;
+  border-image: none;
+  border-radius: 2vw;
+  border-style: none solid solid none;
+  border-width: medium 1px 1px medium;
+  box-shadow: 0 0.5vw 0.5vw rgba(0, 0, 0, 0.12) inset;
+  color: #523636;
+  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-size: 3vw;
+  font-weight: bold;
+  padding: 2vw;
+  transition: background-color 0.2s ease 0s;
+  margin-bottom: 1vh;
+
+  display: inline-block;
+  resize: none;
 }
 
 .image-container {
@@ -41,17 +164,17 @@ body {
   justify-content: center;
   align-content: center;
   align-items: center;
-  z-index: 999999;
+  z-index: 502;
 }
 
 .image-holder {
-  z-index: 999999;
+  z-index: 502;
 }
 
 .image-holder img
 {
   width: 10vw;
-  z-index: 999999;
+  z-index: 502;
 }
 
 .language-container {
@@ -61,7 +184,7 @@ body {
   justify-content: center;
   align-content: center;
   align-items: center;
-  z-index: 999999;
+  z-index: 1001;
   padding: 2.5vh;
   font-size: 2.9vh;
   font-family: sans-serif;
@@ -95,7 +218,7 @@ body {
   font-size: 8vh;
   margin-block-start: unset;
   margin-block-end: 2vw;
-  color: #d5d5d5;
+  color: #efdcc0;
   font-family: sans-serif;
 }
 
@@ -103,7 +226,7 @@ body {
   text-align: center;
   font-size: 3vh;
   margin-block-start: unset;
-  color: #d5d5d5;
+  color: #efdcc0;
   font-family: sans-serif;
   margin: 0;
 }
@@ -140,6 +263,10 @@ body {
   align-items: center;
 }
 
+#back-button {
+  text-align: left!important;
+}
+
 svg {
   width: 5vw;
   fill: #04AA6D;
@@ -168,7 +295,7 @@ svg {
   -webkit-appearance: none;
   width: 100%;
   height: 3vh;
-  background: #d3d3d3;
+  background: #efdcc0;
   border-radius: 7vw;
   outline: none;
   opacity: 0.7;
@@ -197,6 +324,56 @@ svg {
   cursor: pointer;
 }
 
+.add-button-container {
+  position: fixed;
+  bottom: 0px;
+  left: 0px;
+  width: 100%;
+  padding-bottom: 4vh;
+  padding-right: 2.5vw;
+  padding-left: 2.5vw;
+  margin-right: auto;
+  margin-left: auto;
+  z-index: 1001;
+  font-family: sans-serif;
+  font-weight: bolder;
+  font-family: Helvetica;
+
+  align-self: center;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
+}
+
+#add-button {
+  display: flex;
+
+  width: 40vw;
+  height: 7vh;
+  border-radius: 3vw;
+  font-size: 3vw;
+  font-weight: 700;
+  border-width: 0;
+  margin: auto;
+
+  text-transform: uppercase;
+  z-index: 1001;
+  cursor: pointer;
+  color: #efdcc0;
+  background-color: #04aa6dba;
+
+  align-self: center;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
+
+  transition: background-color 300ms;
+}
+
+#add-button:hover {
+  background-color: #f9eedf;
+}
+
 
 #map {
   position: absolute;
@@ -213,27 +390,38 @@ svg {
 
 .recipe-name {
   font-size: 5vh;
-  color: #117e56;
+  margin-bottom: 0.1vw;
 }
 
 #active-popup {
-  font: 400 15px/22px 'Source Sans Pro', 'Helvetica Neue', sans-serif;
-  font-size: 4vh;
+  font: 'Source Sans Pro', 'Helveticae', sans-serif;
+  font-size: 3vh;
+  font-weight: bold;
   line-height: initial;
   word-wrap: break-word;
   background: #e7d4b7c4;
-  color: #6c6151;
+  color: #523636;
   max-height: 50vh;
   border-radius: 5vw;
   overflow-y: scroll;
   padding: 2vh;
 }
 
+#subtitle-popup {
+  color: #117e56
+}
+
 #active-popup::-webkit-scrollbar {
+    width: 2vw;
+}
+textarea::-webkit-scrollbar {
     width: 2vw;
 }
 
 #active-popup::-webkit-scrollbar-track {
+    background-color: transparent;
+}
+textarea::-webkit-scrollbar-track {
     background-color: transparent;
 }
 
@@ -243,12 +431,25 @@ svg {
   border: 1vw;
   background-clip: content-box;
 }
+textarea::-webkit-scrollbar-thumb {
+  background-color: #6c6151;
+  border-radius: 2vw;
+  border: 1vw;
+  background-clip: content-box;
+}
 
 #active-popup::-webkit-scrollbar-thumb:hover {
   background-color: #91836f;
 }
+textarea::-webkit-scrollbar-thumb:hover {
+  background-color: #91836f;
+}
 
 #active-popup::-webkit-scrollbar-track-piece:end {
+    background: transparent;
+    margin-bottom: 4vh;
+}
+textarea::-webkit-scrollbar-track-piece:end {
     background: transparent;
     margin-bottom: 4vh;
 }
@@ -257,6 +458,11 @@ svg {
     background: transparent;
     margin-top: 4vh;
 }
+textarea::-webkit-scrollbar-track-piece:start {
+    background: transparent;
+    margin-top: 4vh;
+}
+
 
 #active-popup-tip {
   display: none;
