--- a/Project/Project2/server/public/css/style.css
+++ b/Project/Project2/server/public/css/style.css
@@ -159,8 +159,10 @@ textarea {
 
 .image-container {
   display: flex;
+  flex-wrap: wrap;
   width: 100%;
   height: 100%;
+  margin: auto;
   justify-content: center;
   align-content: center;
   align-items: center;
