--- a/Project/Project2/server/public/css/style.css
+++ b/Project/Project2/server/public/css/style.css
@@ -15,6 +15,12 @@ Also hides overflow.
      box-sizing: border-box;
     }
 
+@media screen and (max-width: 630px) {
+  .info-container p {
+    font-size: 3vw!important;
+  }
+}
+
 
 body {
   position: relative;
@@ -62,7 +68,7 @@ body {
 
 .info-container p {
   color: #efdcc0;
-  font-size: 3vw;
+  font-size: 2vw;
 }
 
 .info-container h1 {
@@ -472,4 +478,109 @@ textarea::-webkit-scrollbar-track-piece:start {
 
 .mapboxgl-canvas {
 
+}
+
+
+
+/* https://codepen.io/nzbin/pen/GGrXbp */
+/**
+ * ==============================================
+ * Dot Pulse
+ * ==============================================
+ */
+ .snippet {
+   position: relative;
+   margin: 1vh;
+   border: none;
+ }
+
+ .stage {
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   position: relative;
+   padding: 0.5vh 0;
+   margin: 0 -5%;
+   overflow: hidden;
+   border: none;
+ }
+
+.dot-pulse {
+  position: relative;
+  left: -9999px;
+  width: 10px;
+  height: 10px;
+  border-radius: 5px;
+  background-color: #efdcc0;
+  color: #efdcc0;
+  box-shadow: 9999px 0 0 -5px #efdcc0;
+  animation: dotPulse 1.5s infinite linear;
+  animation-delay: .25s;
+
+  justify-content: center;
+  align-content: center;
+  align-items: center;
+}
+
+.dot-pulse::before, .dot-pulse::after {
+  content: '';
+  display: inline-block;
+  position: absolute;
+  top: 0;
+  width: 10px;
+  height: 10px;
+  border-radius: 5px;
+  background-color: #efdcc0;
+  color: #efdcc0;
+}
+
+.dot-pulse::before {
+  box-shadow: 9984px 0 0 -5px #efdcc0;
+  animation: dotPulseBefore 1.5s infinite linear;
+  animation-delay: 0s;
+}
+
+.dot-pulse::after {
+  box-shadow: 10014px 0 0 -5px #efdcc0;
+  animation: dotPulseAfter 1.5s infinite linear;
+  animation-delay: .5s;
+}
+
+@keyframes dotPulseBefore {
+  0% {
+    box-shadow: 9984px 0 0 -5px #efdcc0;
+  }
+  30% {
+    box-shadow: 9984px 0 0 2px #efdcc0;
+  }
+  60%,
+  100% {
+    box-shadow: 9984px 0 0 -5px #efdcc0;
+  }
+}
+
+@keyframes dotPulse {
+  0% {
+    box-shadow: 9999px 0 0 -5px #efdcc0;
+  }
+  30% {
+    box-shadow: 9999px 0 0 2px #efdcc0;
+  }
+  60%,
+  100% {
+    box-shadow: 9999px 0 0 -5px #efdcc0;
+  }
+}
+
+@keyframes dotPulseAfter {
+  0% {
+    box-shadow: 10014px 0 0 -5px #efdcc0;
+  }
+  30% {
+    box-shadow: 10014px 0 0 2px #efdcc0;
+  }
+  60%,
+  100% {
+    box-shadow: 10014px 0 0 -5px #efdcc0;
+  }
 }
